# MalayLanguage

./: .dockerignore  .env.hf.example  .gcloudignore  .gitignore  CLOUD_BUILD_TROUBLESHOOTING.md  CLOUD_RUN_ERROR_FIXES.md  COMMIT_REVIEW.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  DEPLOY_TO_HF_SPACES.py  DEPLOY_TO_HF_SPACES.sh  Dockerfile  Dockerfile.hf  GOOGLE_CLOUD_DEPLOYMENT.md  HF_DEPLOYMENT_README.md  HF_SPACES_DEPLOYMENT.md  HF_SPACES_SUMMARY.md  HF_SPACE_LOGS.py  HF_SPACE_LOGS.sh  IMPLEMENTATION_SUMMARY.md  LICENSE  MERGE_INSTRUCTIONS.md  QUICKSTART.md  QUICKSTART_HF_DEPLOYMENT.md  README.md  README_HF_SPACES.md  REMOTE_DEPLOYMENT_SUMMARY.md  TESTING.md  app.yaml  cloudbuild.yaml  docker-compose.yml  fly.toml  http_server.py  mcp.json  pyproject.toml  railway.toml  render.yaml  requirements.txt  server.json  server.py  (+3 more)
.github/workflows/: docker-build-push.yml
examples/: README.md  claude-desktop-config.json  docker-config.json  hf-spaces-config.json  remote-http-config.json  vscode-mcp.json
tests/: __init__.py  test_server.py
