[project]
name = "malaylanguage-mcp-server"
version = "0.1.0"
description = "MCP server for Malay language processing using Malaya"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "MZA" }
]
license = { text = "MIT" }
dependencies = [
    "mcp>=1.0.0",
    "malaya>=5.1",
    "torch>=2.6.0",  # Required by malaya but not auto-installed; >=2.6.0 for security fixes
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
    "starlette>=0.37.0",
    "sse-starlette>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_backend"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
